# demo-backend

./: Cargo.toml  README.md  build.rs  flake.nix  run.sh
app/: client.rs  server.rs
db/: 000.sql
proto/: cldb.proto
src/: db.rs  lib.rs  types.rs
