[package]
name = "cldb" # "cardano-lightning-demo-backend"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the server
name = "cldb-server"
path = "app/server.rs"

[[bin]] # Bin to run the client
name = "cldb-client"
path = "app/client.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.26"
uuid = { version = "1.4.1", features = ["v4"] }
cryptoxide = "0.4.4"
sqlite = "0.36.0"

[build-dependencies]
tonic-build = "0.9"
